# POLARIS_GEM_e2_manager

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  build.sh  rosdoc.yaml  start.sh
src/robot_management_pack/battery_mock/: CMakeLists.txt  package.xml
src/robot_management_pack/battery_mock/include/: BatteryMockStrings.h
src/robot_management_pack/battery_mock/msg/: BatteryMsg.msg
src/robot_management_pack/battery_mock/src/: BatteryModel.cpp  BatteryModel.h  battery_main.cpp
src/robot_management_pack/estop_mock/: CMakeLists.txt  package.xml
src/robot_management_pack/estop_mock/include/: EstopMockStrings.h
src/robot_management_pack/estop_mock/msg/: EstopMsg.msg
src/robot_management_pack/estop_mock/src/: EstopModel.cpp  EstopModel.h  estop_main.cpp
src/robot_management_pack/gps_mock/: CMakeLists.txt  package.xml
src/robot_management_pack/gps_mock/include/: GpsMockStrings.h
src/robot_management_pack/gps_mock/msg/: GpsMsg.msg
src/robot_management_pack/gps_mock/src/: GpsModel.cpp  GpsModel.h  gps_main.cpp
src/robot_management_pack/robot_manager/: CMakeLists.txt  package.xml
src/robot_management_pack/robot_manager/launch/: robot_manager.launch
src/robot_management_pack/robot_manager/src/: MockControl.cpp  MockControl.h  RobotManager.cpp  RobotManager.h  RobotManagerDefs.h  RobotStateMachine.cpp  RobotStateMachine.h  SensorDataManager.cpp  SensorDataManager.h  SensorThreshold.h  UserInterface.cpp  UserInterface.h  UserInterface.ui  VehicleData.h  robot_manager_main.cpp  unit_tests.cpp
src/robot_management_pack/sensor_mock_lib/: CMakeLists.txt  package.xml
src/robot_management_pack/sensor_mock_lib/include/: DataProfile.h
src/robot_management_pack/sensor_mock_lib/src/: DataProfile.cpp
src/robot_management_pack/sensor_mock_lib/srv/: SensorMockSrv.srv
src/robot_management_pack/temperature_mock/: CMakeLists.txt  package.xml
src/robot_management_pack/temperature_mock/include/: TemperatureMockStrings.h
src/robot_management_pack/temperature_mock/msg/: TemperatureMsg.msg
src/robot_management_pack/temperature_mock/src/: TemperatureModel.cpp  TemperatureModel.h  temperature_main.cpp
src/robot_management_pack/v2x_mock/: CMakeLists.txt  package.xml
src/robot_management_pack/v2x_mock/include/: V2xMockStrings.h
src/robot_management_pack/v2x_mock/msg/: V2xMsg.msg
src/robot_management_pack/v2x_mock/src/: V2xModel.cpp  V2xModel.h  v2x_main.cpp
test_profiles/: assignment_battery_profile.txt  assignment_estop_profile.txt  assignment_gps_profile.txt  assignment_temperature_profile.txt  assignment_v2x_profile.txt  battery_test_profile.txt  battery_test_profile_fast.txt  gpsTestProfile.txt  temperatureTestProfile.txt
