<?xml version="1.0"?>
<package format="2">
  <name>robot_manager</name>
  <version>1.0.0</version>
  <description>Robot Manager - Sensor Data Management Sysyem and High Level Navigation Planner</description>

  <maintainer email="pawel.jaworski@gmail.com">Pawel Jaworski</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>estop_mock</build_depend>
  <build_depend>gps_mock</build_depend>
  <build_depend>temperature_mock</build_depend>
  <build_depend>v2x_mock</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>gem_pure_pursuit_sim</build_depend>
  
  <build_depend>battery_mock</build_depend>
  <build_depend>estop_mock</build_depend>
  <build_depend>gps_mock</build_depend>
  <build_depend>temperature_mock</build_depend>
  <build_depend>v2x_mock</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>message_runtime</exec_depend> 
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>ackermann_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>  
  <build_export_depend>visualization_msgs</build_export_depend>  
  <build_export_depend>gem_pure_pursuit_sim</build_export_depend>
  
  <build_export_depend>battery_mock</build_export_depend>
  <build_export_depend>estop_mock</build_export_depend>
  <build_export_depend>gps_mock</build_export_depend>
  <build_export_depend>temperature_mock</build_export_depend>
  <build_export_depend>v2x_mock</build_export_depend>
  
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>  
  <exec_depend>visualization_msgs</exec_depend>
  
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
